# embed-resource

./: .clang-format  .clang-tidy  .cmake-format.yaml  .commitlintrc.json  .git-blame-ignore  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  README.rst  Resource.h  embedresource.cpp  resource.h  run-clang-tidy  run-clang-tidy.py  setup-dev-environment
.github/workflows/: commitlint.yml
cmake/: CTestCustom.cmake.in  FindFilesystem.cmake  Person93AddResources.cmake
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
include/person93/: resource.h  resource.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  sample-2.txt
test/dir/: sample3.txt
